# qpop

./: .gitignore  CITATION.cff  DISCLAIMER.md  ETHICS.md  LICENSE  Makefile  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: RELEASING.md  ci.yml  publish.yml
benchmarks/: __init__.py
benchmarks/oar/: README.md  __init__.py  harness.py  loader.py  scoring.py
data/synthetic/: README.md  candidate_cards_sample.jsonl  prices_synthetic.csv  qpop_ledger_sample.jsonl  run_manifest_sample.json  scoreboard_sample.csv
docs/: CANDIDATE_PROCESS.md  LITERATURE.md  METHOD.md  PAPER_OUTLINE.md  QPOP_PROTOCOL.md  RESEARCH_RULES.md  RESULTS_INITIAL.md  SYNC.md  TUNING.md  WRITING_STANDARDS.md
examples/: README.md
examples/ai_supply_chain/: README.md
examples/ml_benchmark/: README.md
examples/template_domain/: README.md  benchmark_config.template.yml  bottleneck_map.template.yml
paper/: abstract.md  contributions.md  experiment_plan.md  paper.tex  references.bib  related_work.md
repro/: README.md  tamper_demo.py  validate_samples.py
research/docs/: ARXIV_ENDORSER_PREP.md  METHOD.md  (+10 more)
schemas/: README.md  candidate_card.schema.json  evidence.schema.json  exit_trigger.schema.json  qpop_entry.schema.json  run_manifest.schema.json
scripts/: check_sync_drift.sh  qpop.py  sync_manifest.tsv
src/: README.md  gate_reference.md  prompts.md
tests/: README.md  test_anchor.py  test_evalue.py  test_evalue_ledger.py  test_external_anchor.py  test_ledger.py  test_oar_discipline_curve.py  test_oar_loader.py  test_oar_schemas.py  test_oar_scoring.py  test_schemas.py
(+32 files in other folders)
