[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forward-qpop"
version = "0.1.2"
description = "Tamper-evident, append-only forward pre-registration ledger for auditable, leakage-resistant research (the Forward-QPOP protocol)."
readme = "src/forward_qpop/README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Yixing Zheng", email = "yz11739@stern.nyu.edu" }]
keywords = [
  "pre-registration", "reproducibility", "trustworthy-ai", "auditability",
  "hash-chain", "research-integrity", "forward-validation", "look-ahead-bias",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
anchor = ["opentimestamps-client>=0.7.0"]

[project.urls]
Homepage = "https://github.com/yixingz3/qpop"
Repository = "https://github.com/yixingz3/qpop"
Paper = "https://github.com/yixingz3/qpop/tree/main/research/paper"

[project.scripts]
forward-qpop = "forward_qpop.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/forward_qpop"]

[tool.hatch.build.targets.sdist]
include = ["src/forward_qpop", "README.md", "LICENSE"]

[tool.pytest.ini_options]
pythonpath = ["src"]
